[project]
name = "rofl-voice-splitter"
version = "0.1.0"
description = "Download YouTube audio, transcribe with Whisper, export per-phrase MP3 files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.1.0",
    "pydub>=0.25.1",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "imageio-ffmpeg>=0.5.0",
    "nvidia-cublas-cu12>=12.4.0",
    "nvidia-cudnn-cu12>=9.1.0",
    "unidecode>=1.3.0",
]

[tool.uv]
package = false
